# imu-rpc

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  _connection_t_c_p_client_8cpp.html  _connection_t_c_p_client_8cpp__incl.map  _connection_t_c_p_client_8cpp__incl.md5  _connection_t_c_p_client_8hpp_source.html  _d_bus_cxx_server_8cpp.html  _d_bus_cxx_server_8cpp__incl.map  _d_bus_cxx_server_8cpp__incl.md5  _d_bus_cxx_server_8hpp__dep__incl.map  _d_bus_cxx_server_8hpp__incl.map  _d_bus_cxx_server_8hpp__incl.md5  _d_bus_cxx_server_8hpp_source.html  _d_bus_i_m_u_client_8cpp.html  _d_bus_i_m_u_client_8cpp__incl.map  _d_bus_i_m_u_client_8cpp__incl.md5  _d_bus_types_8hpp.html  _d_bus_types_8hpp.js  _d_bus_types_8hpp__dep__incl.map  _d_bus_types_8hpp__dep__incl.md5  _i_i_m_u_abstraction_8hpp.html  _i_i_m_u_abstraction_8hpp.js  _i_i_m_u_abstraction_8hpp__dep__incl.map  _i_i_m_u_abstraction_8hpp__dep__incl.md5  _i_i_m_u_abstraction_8hpp_source.html  _i_i_m_u_client_8hpp.js  _i_i_m_u_math_8hpp.html  _i_i_m_u_math_8hpp.js  _i_i_m_u_math_8hpp__dep__incl.map  _i_i_m_u_math_8hpp__dep__incl.md5  _i_i_m_u_math_8hpp__incl.md5  _i_i_m_u_math_8hpp_source.html  _i_i_m_u_server_8hpp.html  _i_i_m_u_server_8hpp__dep__incl.map  _i_i_m_u_server_8hpp__dep__incl.md5  _i_i_m_u_server_8hpp__incl.map  _i_i_m_u_server_8hpp__incl.md5  (+847 more)
.github/workflows/: coverage.yml  doc-generation.yml  main.yml  runtime-tests.yml  stability-tests.yml  static-analysis.yml  unittest.yml
client/: CMakeLists.txt
client/app/: CMakeLists.txt
client/app/src/: argparser.cpp  argparser.hpp  client.cpp
client/imu-cli/: CMakeLists.txt
client/imu-cli/src/: argparser.cpp  argparser.hpp  client.cpp  imu-cli.cpp
client/imu-socket/: CMakeLists.txt
client/imu-socket/SocketHandler/: CMakeLists.txt
client/imu-socket/SocketHandler/include/: ConnectionClient.hpp  ConnectionTCPClient.hpp  ISocketServer.hpp  SocketServerImpl.hpp  SocketServerTCP.hpp  SocketServerUDP.hpp
client/imu-socket/SocketHandler/src/: ConnectionClient.cpp  ConnectionTCPClient.cpp  SocketServerImpl.cpp  SocketServerTCP.cpp  SocketServerUDP.cpp
client/imu-socket/app/: CMakeLists.txt
client/imu-socket/app/src/: argparser.cpp  argparser.hpp  imu-socket.cpp
doc/: .doxygen
gtest_mocks/: CMakeLists.txt
gtest_mocks/mocks/: MockIMUAbstraction.hpp  MockIMUAngle.hpp  MockRPCServer.hpp
html/: _connection_t_c_p_client_8cpp__incl.map  _connection_t_c_p_client_8hpp.html  _connection_t_c_p_client_8hpp__dep__incl.map  _connection_t_c_p_client_8hpp__dep__incl.md5  _connection_t_c_p_client_8hpp__incl.map  _connection_t_c_p_client_8hpp__incl.md5  _d_bus_cxx_server_8cpp__incl.md5  _d_bus_cxx_server_8hpp.html  _d_bus_cxx_server_8hpp__dep__incl.md5  _d_bus_i_m_u_client_8cpp__incl.md5  _d_bus_i_m_u_client_8hpp.html  _d_bus_i_m_u_client_8hpp__dep__incl.map  _d_bus_i_m_u_client_8hpp__dep__incl.md5  _d_bus_i_m_u_client_8hpp__incl.map  _d_bus_i_m_u_client_8hpp__incl.md5  _d_bus_i_m_u_client_8hpp_source.html  _d_bus_types_8hpp__dep__incl.md5  _d_bus_types_8hpp_source.html  _i_i_m_u_abstraction_8hpp.html  _i_i_m_u_abstraction_8hpp.js  _i_i_m_u_abstraction_8hpp__dep__incl.md5  _i_i_m_u_abstraction_8hpp__incl.map  _i_i_m_u_abstraction_8hpp__incl.md5  _i_i_m_u_client_8hpp.html  _i_i_m_u_client_8hpp__dep__incl.map  _i_i_m_u_client_8hpp__dep__incl.md5  _i_i_m_u_client_8hpp__incl.map  _i_i_m_u_client_8hpp__incl.md5  _i_i_m_u_client_8hpp_source.html  _i_i_m_u_math_8hpp.html  _i_i_m_u_math_8hpp__dep__incl.md5  _i_i_m_u_math_8hpp__incl.map  _i_i_m_u_math_8hpp_source.html  _i_i_m_u_server_8hpp.js  _i_i_m_u_server_8hpp__dep__incl.md5  _i_i_m_u_server_8hpp_source.html  _i_m_u_buffer_i_i_o_8cpp.html  _i_m_u_buffer_i_i_o_8cpp.js  _i_m_u_buffer_i_i_o_8cpp__incl.map  _i_m_u_buffer_i_i_o_8cpp__incl.md5  (+331 more)
html/search/: all_0.js  all_10.js  all_2.js  all_5.js  all_6.js  all_b.js  all_d.js  all_e.js  classes_0.js  classes_5.js  defines_2.js  defines_6.js  enums_0.js  enumvalues_5.js  enumvalues_7.js  enumvalues_8.js  enumvalues_9.js  files_5.js  files_6.js  functions_1.js  functions_2.js  functions_7.js  functions_9.js  functions_d.js  namespaces_2.js  pages_0.js  searchdata.js  typedefs_1.js  typedefs_2.js  typedefs_3.js  variables_11.js  variables_12.js  variables_14.js  variables_5.js  variables_6.js  variables_8.js  variables_c.js  variables_e.js  variables_f.js
lib/: CMakeLists.txt
lib/DBusTypes/: CMakeLists.txt
lib/IMUClient/: CMakeLists.txt
lib/IMUClient/include/: DBusIMUClient.hpp  IIMUClient.hpp
lib/IMUClient/src/: DBusIMUClient.cpp
lib/Logger/: CMakeLists.txt
lib/Logger/include/: Log.h  LogInstance.h  LogInstance.hpp
lib/Logger/src/: Log.cpp
lib/Timer/: CMakeLists.txt
script/: imu-dbus.py  imucube.py  imuplot.py  requirements.txt  sockethandler.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  (+81 more)
server/: CMakeLists.txt
server/IMUMath/: CMakeLists.txt
server/IMUMath/include/: IIMUMath.hpp  IMUMathImpl.hpp
server/IMUMath/src/: IMUMathImpl.cpp
server/IMUMath/tests/: CMakeLists.txt
server/IMUMath/tests/include/: LogInstance.h
server/IMUMath/tests/src/: tests_imumathimpl.cpp
server/IMUServer/: CMakeLists.txt
server/IMUServer/include/: IIMUServer.hpp  IMURPCServer.hpp
server/IMUServer/src/: IMURPCServer.cpp
server/IMUServer/tests/: CMakeLists.txt
server/IMUServer/tests/mocks/: MockIMUMath.hpp
server/IMUServer/tests/src/: tests_imurpcserver.cpp
server/RPCServer/: CMakeLists.txt
server/RPCServer/include/: DBusCxxServer.hpp  IRPCServer.hpp
server/RPCServer/src/: DBusCxxServer.cpp
server/app/: CMakeLists.txt
server/app/src/: argparser.cpp  argparser.hpp  argvalidator.cpp  argvalidator.hpp  server.cpp
(+38 files in other folders)
